# mavis-reporting-prototype

./: .env.example  .gitignore  .tool-versions  Dockerfile  Makefile  Procfile  Procfile.dev  README.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-push-image.yml  deploy-application.yml  lint-and-test.yaml  stage-1-commit.yaml  stage-2-test.yaml
config/: container_variables.yml
config/templates/: appspec.yaml.tpl  task-definition.json.tpl
docs/adr/: ADR-001_use_a_mainstream_framework.md
docs/user-guides/: Run_Git_hooks_on_commit.md  Sign_Git_commits.md
mavis_reporting/: __init__.py  views.py
mavis_reporting/api/: client.py
mavis_reporting/config/: __init__.py  jinja2.py  mavis.py
mavis_reporting/helpers/: auth_helper.py  breadcrumb_helper.py  mavis_helper.py  measure_faker_helper.py  number_helper.py  region_data_helper.py  secondary_nav_helper.py  static_file_helper.py  url_helper.py
mavis_reporting/javascript/: app.js
mavis_reporting/models/: measure.py  organisation.py  provider.py  region.py  school.py
mavis_reporting/templates/: api_call.jinja  base.html  base.jinja  dashboard.jinja  data_definitions.jinja  default.jinja  download.jinja  index.html  index.jinja  login.jinja  organisation.jinja  organisation_children.jinja  providers.jinja  region_providers.jinja
scripts/: populate_task_definition.py
scripts/config/: pre-commit.yaml
scripts/tests/: coverage.sh  test.mk  unit.sh
tests/: conftest.py
tests/auth/: test_auth.py
tests/helpers/: test_auth_helper.py  (+2 more)
(+21 files in other folders)
